fix safari overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,10 @@ body {
     overflow-x: hidden;
 }
 
+#main-site-body-wrap {
+    overflow-x: hidden;
+}
+
 iframe {
     max-width: 100%;
 }
